--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
     - ./.travis/php_build.sh `pwd` php-${PT_PHP_VERSION}.tar.bz2
     - PT_PHP_PATH=`pwd`/php-${PT_PHP_VERSION}
     - PT_PHP_BIN=${PT_PHP_PATH}/bin/php
+    - sudo apt-get install valgrind
 
 before_script:
     - ./.travis/ext_build.sh extension ${PT_PHP_PATH}
@@ -25,4 +26,8 @@ before_script:
 
 script:
     - (cd ${PT_PHP_PATH} && TEST_PHP_EXECUTABLE=${PT_PHP_BIN} ${PT_PHP_BIN} -n run-tests.php -q -n -d extension=trace.so -g "FAIL" --show-diff --set-timeout 120 tests Zend/tests; true)
-    - (cd extension && REPORT_EXIT_STATUS=1 TEST_PHP_EXECUTABLE=${PT_PHP_BIN} ${PT_PHP_BIN} -n run-tests.php -q -n -d extension=trace.so --show-diff)
+    - (cd extension && REPORT_EXIT_STATUS=1 TEST_PHP_EXECUTABLE=${PT_PHP_BIN} ${PT_PHP_BIN} -n run-tests.php -q -m -n -d extension=trace.so --show-diff)
+
+after_script:
+    - ./.travis/php_bench.sh ${PT_PHP_PATH} ${PT_PHP_VERSION}
+
