--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ os:
     - osx
 
 env:
+    - PT_PHP_VERSION=7.2.0alpha2
     - PT_PHP_VERSION=7.1.2
+    - PT_PHP_VERSION=7.2.0
     - PT_PHP_VERSION=7.0.16
     - PT_PHP_VERSION=5.6.30
     - PT_PHP_VERSION=5.5.38
